General updates on March 6 2016

--- a/VisualizeIt/README.rdoc
+++ b/VisualizeIt/README.rdoc
@@ -1,10 +1,6 @@
-== Visualize It 2.0
+== README
 
-A calculator for appraising your weekly budget and managing it towards financial goals you have on 
-an annual basis (vacations, continuing ed) 
-or in the future (children's education, retirement)
-
-README would normally document whatever steps are necessary to get the
+This README would normally document whatever steps are necessary to get the
 application up and running.
 
 Things you may want to cover:
